--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"ewpsupr": "."}'
+			data-sap-ui-resourceroots='{"ewpsupr1": "."}'
 			data-sap-ui-frameOptions="trusted"
 			data-sap-ui-appCacheBuster="./">
 	</script>
@@ -28,7 +28,7 @@
 				new Shell({
 					app: new ComponentContainer({
 						height : "100%",
-						name : "ewpsupr"
+						name : "ewpsupr1"
 					})
 				}).placeAt("content");
 			});
